# smart_palletizer

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  compose.yaml  requirements.txt  setup.py  train_cnn.py.lprof
data/medium_box/: cam2root.json  intrinsics.json  medium_box_0_raw.ply  medium_box_1_raw.ply  medium_box_mesh.ply
data/small_box/: cam2root.json  small_box_0_raw.ply  small_box_10_raw.ply  small_box_1_raw.ply  small_box_2_raw.ply  small_box_3_raw.ply  small_box_4_raw.ply  small_box_5_raw.ply  small_box_6_raw.ply  small_box_7_raw.ply  small_box_8_raw.ply  small_box_9_raw.ply  small_box_mesh.ply
docs/: Doxyfile.in  requirements.txt
docs/source/: conf.py  index.rst  modules.rst  smart_palletizer_py.rst
examples/debugging/temp/: depth_0000.exr  segmap_0000.exr
src/rviz2/: default.rviz
src/smart_palletizer_cnn/: package.xml  setup.cfg  setup.py
src/smart_palletizer_cnn/smart_palletizer_cnn/: box_and_pose_dataset.py  generate_synth_data.py  generate_texture.py  train_cnn.py  train_test_model.py  yolo_model.py
src/smart_palletizer_cpp/: CMakeLists.txt  package.xml
src/smart_palletizer_cpp/src/: detection.cpp
src/smart_palletizer_interfaces/: CMakeLists.txt  package.xml
src/smart_palletizer_interfaces/msg/: BoxInfo.msg  BoxInfoArray.msg  BoxPose.msg  BoxPoseArray.msg  DetectedBox.msg  DetectedBoxes.msg
src/smart_palletizer_py/: package.xml  setup.cfg  setup.py
src/smart_palletizer_py/launch/: box_detection.launch.py  box_spawn.launch.py  (+3 more)
src/smart_palletizer_utils/: package.xml  setup.cfg  setup.py
src/utils/: generate_synth_data.py
(+16 files in other folders)
